Corrected the request URL

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <label for="form__zip-code" class="form__label label__zip-code">Digite o CEP:</label>
         <input type="number" class="form__input form__zip-code" id="form__zip-code" value="13990000">
 
-        <button class="form__button" id="form__button" type="button" onclick="ZipConsultation()">Consultar CEP</button>
+        <button class="form__button" id="form__button" type="button" onclick="ZipConsultation(event)">Consultar CEP</button>
 
         <label for="form__street" class="form__label label__street">Logradouro:</label>
         <input type="text" class="form__input form__street" id="form__street">
